syntax = "proto3";

option csharp_namespace = "Grpc.CustomerAuth";

service GrpcCustomerAuth {
	rpc RegisterCustomer(CustomerRegistrationRequest) returns (CustomerRegistrationResponse);
	rpc LoginCustomer(CustomerLoginRequest) returns (CustomerLoginResponse);
	rpc VerifyCustomerEmail(CustomerVerifyEmailRequest) returns (CustomerVerifyEmailResponse);
	rpc ValidateEmailToken(ValidateEmailTokenRequest) returns (ValidateEmailTokenResponse);
}


message CustomerRegistrationRequest {
	string email = 1;
	string password = 2;
}

message CustomerRegistrationResponse {
	bool succeeded = 1;
    int32 statusCode = 2;
    string errorMessage = 3;
    AuthInfo authInfo = 4;
}

message CustomerLoginRequest {
	string email = 1;
	string password = 2;
}

message CustomerLoginResponse {
	bool succeeded = 1;
    int32 statusCode = 2;
    string errorMessage = 3;
    AuthInfo authInfo = 4;
}

message CustomerVerifyEmailRequest {
	string email = 1;
	string token = 2;
}

message CustomerVerifyEmailResponse {
	bool succeeded = 1;
    int32 statusCode = 2;
    string errorMessage = 3;
    AuthInfo authInfo = 4;
}

message AuthInfo {
	string Token = 1;
	string UserType = 2;
	string UserId = 3;
	bool EmailConfirmed = 4;
	string ConfirmEmailToken = 5;
}

message ValidateEmailTokenRequest {
	string email = 1;
	string token = 2;
}

message ValidateEmailTokenResponse {
	bool succeeded = 1;
    int32 statusCode = 2;
    string errorMessage = 3;
}